tests/NormalTests/paczka1/fuzzy1/13270178.err
Error in line 3: Z0x9OqIx A522 29,1
Error in line 4: Z0x9OqIx S502 96,4
Error in line 8: Z0x9OqIx So73 74,7
Error in line 7: Z0x9OqIx S673 18,9
Error in line 17: MkDfkQ4 S502 68,2
Error in line 27: A6 S673 31,8
Error in line 28: A6 S673 0,0
Error in line 29: hkZkZ8iYxn5 A522 57,36
Error in line 34: A6 S673 10,2
